@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libfdata],
- [20140421],
+ [20140601],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
@@ -74,6 +74,32 @@ AX_COMMON_CHECK_ENABLE_VERBOSE_OUTPUT
 
 dnl Check if libfdata should be build with debug output
 AX_COMMON_CHECK_ENABLE_DEBUG_OUTPUT
+
+dnl Headers included in various places
+AC_CHECK_HEADERS([stdarg.h varargs.h])
+
+AS_IF(
+ [test "x$ac_cv_header_stdarg_h" != xyes && test "x$ac_cv_header_varargs_h" != xyes],
+ [AC_MSG_FAILURE(
+  [Missing headers: stdarg.h and varargs.h],
+  [1])
+ ])
+
+dnl Check if DLL support is needed
+AS_IF(
+ [test "x$enable_shared" = xyes],
+ [AS_CASE(
+  [$host],
+  [*cygwin* | *mingw*],
+  [AC_DEFINE(
+   [HAVE_DLLMAIN],
+   [1],
+   [Define to 1 to enable the DllMain function.])
+  AC_SUBST(
+   [HAVE_DLLMAIN],
+   [1])
+  ])
+ ])
 
 dnl Set additional compiler flags
 CFLAGS="$CFLAGS -Wall";
